# nelda

./: LICENSE  README.md  cabal.project  link.rb  stack.yaml  stack.yaml.OBSOLETE
nelda-sqlite/: nelda-sqlite.cabal
nelda-sqlite/src/Data/: Single.hs
nelda-sqlite/src/Database/: Nelda.hs
nelda-sqlite/src/Database/Nelda/: SqlOrd.hs  SqlRowConversion.hs  SqlType.hs  SqlTypeClass.hs  SqlTypeConversion.hs  SqlTypeDeriveStrategy.hs  Types.hs
nelda-sqlite/src/Database/Nelda/Backend/: Connection.hs  Monad.hs  Runner.hs  Statement.hs  Types.hs
nelda-sqlite/src/Database/Nelda/Compile/: Index.hs  SQL.hs  Schema.hs  Table.hs  TableFields.hs
nelda-sqlite/src/Database/Nelda/Query/: Name.hs  Result.hs  SqlClauseUnsafe.hs  SqlExpression.hs  SqlExpressionUnsafe.hs
nelda-sqlite/src/Database/Nelda/SQL/: Aggr.hs  Col.hs  Nullability.hs  Row.hs  RowHasFieldInstance.hs  Types.hs
nelda-sqlite/src/Database/Nelda/Schema/: ColumnConstraint.hs  ColumnConstraintCommon.hs
nelda-sqlite/src/Database/Nelda/Schema/Column/: SqlColumnTypeInstances.hs  SqlColumnTypeRepAndKind.hs  TypesPerDB.hs
nelda-sqlite/src/Database/Nelda/Schema/Table/: TypesCommon.hs  TypesPerDB.hs
nelda-try/: Main.hs  nelda-try.cabal
selda/: selda.cabal
selda-core/: selda-core.cabal
selda-core/src/Database/Nelda/: Types.hs
selda-postgresql/: selda-postgresql.cabal
selda-postgresql/impl/Database/Nelda/: SqlType.hs
selda-postgresql/impl/Database/Nelda/Backend/: Types.hs
selda-postgresql/impl/Database/Nelda/Schema/: ColumnTypes.hs  SqlColumnType.hs  SqlTableType.hs  TableTypes.hs
selda-postgresql/impl/Database/Selda/PostgreSQL/: Connection.hs  Encoding.hs  Oid.hs  PPConfig.hs  Types.hs
selda-postgresql/src/Database/Selda/: PostgreSQL.hs
selda-postgresql/src/Database/Selda/PostgreSQL/: Encoding.hs
selda-sqlite/: Setup.hs  selda-sqlite.cabal
selda-sqlite/impl/Database/Nelda/: SqlType.hs
selda-sqlite/impl/Database/Nelda/Compile/: Schema.hs
selda-sqlite/impl/Database/Nelda/SQLite/: SqlColumnType.hs  SqlTableType.hs  SqlType.hs
selda-sqlite/impl/Database/Nelda/Schema/: ColumnType.hs  ColumnTypeDefs.hs  SqlColumnType.hs  SqlTableType.hs
selda-sqlite/impl/Database/Selda/SQLite/: Connection.hs  PPConfig.hs  Parser2.hs  Types.hs
selda-sqlite/src/: JRecExended.hs
selda-sqlite/src/Data/: CoalesceMaybe.hs  Tagged.hs  Tup.hs
selda-sqlite/src/Database/: Nelda.hs  Selda.hs
selda-sqlite/src/Database/Nelda/: Action.hs  SQLite.hs  Schema.hs  SqlOrd.hs  SqlRow.hs  SqlRowConversion.hs  SqlType.hs  SqlTypeConversion.hs  SqlTypeRep.hs
selda-sqlite/src/Database/Nelda/Backend/: Connection.hs  Types.hs
selda-sqlite/src/Database/Nelda/Compile/: CreateIndex.hs  CreateTable.hs  Delete.hs  Index.hs  Insert.hs  Query.hs  Quoting.hs  SQL.hs  Schema.hs  TableFields.hs  Types.hs
selda-sqlite/src/Database/Nelda/Query/: Columns.hs  Monad.hs  Result.hs  ResultReader.hs  ResultRow.hs  Select.hs  SqlClause.hs  SqlClauseUnsafe.hs  SqlExpression.hs  SqlExpressionUnsafe.hs
selda-sqlite/src/Database/Nelda/SQL/: Aggr.hs  Col.hs  Row.hs  RowHasFieldInstance.hs  Scope.hs  Selector.hs  Transform.hs  Types.hs
selda-sqlite/src/Database/Nelda/Schema/: Column.hs  ColumnConstraintPerDB.hs  ColumnType.hs  ColumnTypeDefs.hs  Index.hs  IsColumnNames.hs  IsColumnSubset.hs  IsColumns.hs  Table.hs  TableAttrDefinition.hs  TableConstraint.hs  TableTypeDefs.hs
selda-sqlite/src/Database/Nelda/Schema/Column/: SqlColumnTypeClass.hs  SqlColumnTypeInstances.hs  SqlColumnTypeRepAndKind.hs  Types.hs  TypesCommon.hs
selda-sqlite/src/Database/Nelda/Schema/Table/: Types.hs  TypesPerDB.hs
selda-sqlite/src/Database/Selda/: Backend.hs  Column.hs  Compile.hs  Debug.hs  FieldSelectors.hs  Frontend.hs  Generic.hs  Inner.hs  MakeSelectors.hs  Migrations.hs  Nullable.hs  Prepared.hs  Query.hs  SQL.hs  SQLite.hs  Selectors.hs  SqlRow.hs  SqlType.hs  Table.hs  Transform.hs  Types.hs  Unsafe.hs  Validation.hs
selda-sqlite/src/Database/Selda/Backend/: Connection.hs  Internal.hs  PPConfig.hs
selda-sqlite/src/Database/Selda/Query/: Type.hs
selda-sqlite/src/Database/Selda/SQL/: Print.hs
selda-sqlite/src/Database/Selda/SQL/Print/: Config.hs
selda-sqlite/src/Database/Selda/Table/: Compile.hs  Type.hs  Validation.hs
selda-tests/: selda-tests.cabal
selda-tests/test/: RunTests.hs  Tables.hs  Utils.hs
selda-tests/test/Tests/: JSON.hs  MultiConn.hs  Mutable.hs  NonDB.hs  PGConnectionString.hs  Query.hs  Validation.hs
selda-try/: CHANGELOG.md  Main.hs  selda-try.cabal
selda/src/Database/: Selda.hs
selda/src/Database/Nelda/: Action.hs  ColType.hs  Column.hs  ColumnType.hs  IsColNames.hs  IsColumnNames.hs  IsColumnSubset.hs  IsColumns.hs  Schema.hs  SqlColumnType.hsig  SqlTableType.hsig  SqlType.hsig  SqlTypeClass.hs  SqlTypeDeriveStrategy.hs  SqlTypeRep.hsig  TabAttr.hs  TabAttrDefinition.hs  Table.hs  TableAttr.hs  TableAttrDefinition.hs
selda/src/Database/Nelda/Backend/: Types.hsig
selda/src/Database/Nelda/Compile/: CreateTable.hs  Insert.hs  Schema.hsig  Table.hs
selda/src/Database/Nelda/Query/: Select.hs
selda/src/Database/Nelda/Schema/: Column.hs  ColumnConstraint.hs  ColumnConstraintCommon.hs  ColumnConstraintPerDB.hsig  ColumnType.hsig  ColumnTypeDefs.hsig  IsColumnNames.hs  IsColumnSubset.hs  IsColumns.hs  SqlColumnType.hsig  SqlTableType.hsig  Table.hs  TableConstraint.hsig  TableTypeDefs.hsig
selda/src/Database/Nelda/Schema/Column/: SqlColumnTypeInstances.hsig  SqlColumnTypeRepAndKind.hsig  Types.hs  TypesCommon.hs  TypesPerDB.hsig
selda/src/Database/Nelda/Schema/Table/: Types.hs  TypesCommon.hs
selda/src/Database/Selda/: Backend.hs  Column.hs  Compile.hs  Debug.hs  Frontend.hs  Generic.hs  Inner.hs  Migrations.hs  Prepared.hs  Query.hs  SQL.hs  SqlRow.hs  SqlType.hs  Transform.hs  Types.hs  Unsafe.hs  Validation.hs
selda/src/Database/Selda/Backend/: Class.hs  Connection.hsig  Internal.hs  PPConfig.hsig  Types.hsig
selda/src/Database/Selda/Query/: Type.hs
selda/src/Database/Selda/SQL/: Print.hs
selda/src/Database/Selda/SQL/Print/: Config.hs
selda/src/Database/Selda/Table/: Compile.hs  Type.hs
(+3 files in other folders)
