cabal-version:       3.0
name:                selda-sqlite
version:             0.1.7.1
synopsis:            SQLite backend for the Selda database EDSL.
description:         Allows the Selda database EDSL to be used with SQLite
                     databases.
homepage:            https://github.com/valderman/selda
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Database
build-type:          Simple

library selda-sqlite-impl
  exposed-modules:
    Database.Selda.SQLite.Types
    Database.Selda.SQLite.PPConfig
    Database.Selda.SQLite.Connection
  build-depends:
      base          >=4.9 && <5
    , selda-core
    , text          >=1.0 && <1.3
    , bytestring    >=0.10  && <0.11
    , direct-sqlite >=2.2   && <2.4
    , directory     >=1.2.2 && <1.4
    , exceptions    >=0.8 && <0.11
    , time          >=1.5   && <1.11
    , uuid-types    >=1.0   && <1.1
  hs-source-dirs:
    impl
  default-language:
    Haskell2010
  ghc-options:
    -Wall

library
  exposed-modules:
    Database.Selda.SQLite
  other-modules:
    Database.Selda.SQLite.Parser
  mixins:
      selda requires (Database.Selda.Backend.Types as Database.Selda.SQLite.Types)
    , selda requires (Database.Selda.Backend.PPConfig as Database.Selda.SQLite.PPConfig)
    , selda requires (Database.Selda.Backend.Connection as Database.Selda.SQLite.Connection)
  other-extensions:
    GADTs
    CPP
  build-depends:
      base          >=4.9 && <5
    , selda-sqlite-impl
    , selda         >=0.5 && <0.6
    , text          >=1.0 && <1.3
    , bytestring    >=0.10  && <0.11
    , direct-sqlite >=2.2   && <2.4
    , directory     >=1.2.2 && <1.4
    , exceptions    >=0.8 && <0.11
    , time          >=1.5   && <1.11
    , uuid-types    >=1.0   && <1.1
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
