cabal-version:       3.0
name:                selda-sqlite
version:             0.1.7.1
synopsis:            SQLite backend for the Selda database EDSL.
description:         Allows the Selda database EDSL to be used with SQLite
                     databases.
homepage:            https://github.com/valderman/selda
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Database
build-type:          Simple

library
  exposed-modules:
    Database.Selda.SQLite.Types
    Database.Selda.SQLite.PPConfig
    Database.Selda.SQLite.Connection

    Database.Nelda.SqlType
    Database.Nelda.Schema.SqlColumnType
    Database.Nelda.Schema.SqlTableType
  other-modules:
    Database.Selda.SQLite.Parser
  build-depends:
      base          >=4.9 && <5
    , selda-core
    , text          >=1.0 && <1.3
    , bytestring    >=0.10  && <0.11
    , direct-sqlite >=2.2   && <2.4
    , directory     >=1.2.2 && <1.4
    , exceptions    >=0.8 && <0.11
    , time          >=1.5   && <1.11
    , uuid-types    >=1.0   && <1.1
  hs-source-dirs:
    impl
  default-language:
    Haskell2010
  ghc-options:
    -Wall

-- library
--   exposed-modules:
--     Database.Selda.SQLite
--   reexported-modules:
--     Database.Selda.Backend          as Database.Selda.SQLite.Backend
--    ,Database.Selda.Backend.Internal as Database.Selda.SQLite.Backend.Internal
--    ,Database.Selda.Debug            as Database.Selda.SQLite.Debug
--    ,Database.Selda.MakeSelectors    as Database.Selda.SQLite.MakeSelectors
--    ,Database.Selda.Migrations       as Database.Selda.SQLite.Migrations
--    ,Database.Selda.Nullable         as Database.Selda.SQLite.Nullable
--    ,Database.Selda.SqlType          as Database.Selda.SQLite.SqlType
--    ,Database.Selda.Unsafe           as Database.Selda.SQLite.Unsafe
--    ,Database.Selda.Validation       as Database.Selda.SQLite.Validation
--   mixins:
--     selda requires (Database.Selda.Backend.Types as Database.Selda.SQLite.Types, Database.Selda.Backend.PPConfig as Database.Selda.SQLite.PPConfig, Database.Selda.Backend.Connection as Database.Selda.SQLite.Connection)
--   other-extensions:
--     GADTs
--     CPP
--   build-depends:
--       base          >=4.9 && <5
--     , selda-sqlite-impl
--     , selda         >=0.5 && <0.6
--     , text          >=1.0 && <1.3
--     , bytestring    >=0.10  && <0.11
--     , direct-sqlite >=2.2   && <2.4
--     , directory     >=1.2.2 && <1.4
--     , exceptions    >=0.8 && <0.11
--     , time          >=1.5   && <1.11
--     , uuid-types    >=1.0   && <1.1
--   hs-source-dirs:
--     src
--   default-language:
--     Haskell2010
--   ghc-options:
--     -Wall
