cabal-version:       3.0
name:                selda-sqlite
version:             0.1.7.1
synopsis:            SQLite backend for the Selda database EDSL.
description:         Allows the Selda database EDSL to be used with SQLite
                     databases.
homepage:            https://github.com/valderman/selda
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Database
-- build-type:          Simple
build-type: Custom

custom-setup
  setup-depends:
    base >= 4.14 && < 5,
    Cabal >= 3.2.0.0 && < 4,
    cabal-auto-expose

library
  -- exposed-modules:
  other-extensions:
    GADTs
  build-depends:
      base          >=4.9 && <5
    , selda-core
    , jrec
    , mtl
    , containers
    , text          >=1.0 && <1.3
    , bytestring    >=0.10  && <0.11
    , direct-sqlite >=2.2   && <2.4
    , directory     >=1.2.2 && <1.4
    , exceptions    >=0.8 && <0.11
    , record-hasfield
    , constraints
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
